# smiledetect

./: .gitignore  LICENSE  README.md
_frontend/src/: App.css  App.js  package-lock.json  package.json  store.js
_frontend/src/components/: UploadForm.js
_frontend/src/features/upload/: uploadSlice.js
backend/: pyproject.toml
backend/src/: db_create_test_row.py  db_read_data.py  db_smile_model.py  detector.py  main.py  smiledata.db  video.py
frontend/: package-lock.json
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.jsx  main.jsx  store.jsx
ui/src/components/: Results.jsx  UploadForm.jsx  WebcamCapture.jsx
ui/src/services/: captureService.jsx  dbService.jsx  uploadService.js  uploadService.jsx
ui/src/slices/: dbSlice.jsx  uploadSlice.jsx
webcam/app/src/: App.jsx  webcam-image-capture.tsx
